@@ -1,3 +1,7 @@
+2008-01-06  Danny Backx  <dannybackx@users.sourceforge.net>
+
+	* install.sh: Make it TARGET-independent and detect errors.
+
 2006-10-10  Pedro Alves  <pedro_alves@portugalmail.pt>
 Initial import.
 	* cegcc.s  : New file.
